<resources>

    <string name="app_name">San Diego Sol</string>
    <string name="season_name_hint">Please select a Season</string>
    <string name="division_name_hint">Please select a Division</string>
    <string name="conference_name_hint">Please select a Conference</string>
    <string name="team_name_hint">Please select a Team</string>
    <string name="no_information_available">No information is available.</string>
    <string name="try_again_for_update">Exit/return for updated results.</string>
    <string name="fatal_conference_suggestion">Try a different division</string>
    <string name="score">score</string>
    <string name="game_dateTime_hint">Game Time and Date</string>
    <string name="game_location_hint">Game Location / Field</string>
    <string name="game_away_team_hint">Away Team</string>
    <string name="game_home_team_hint">Home Team</string>
    <string name="game_away_score_hint">Score</string>
    <string name="game_home_score_hint">Score</string>
    <string name="game_2tbd_1_of_2">To be </string>
    <string name="game_2tbd_2_of_2">Determined</string>
    <string name="game_3rain_1_of_2">Rained</string>
    <string name="game_3rain_2_of_2">Out</string>
    <string name="game_4cancel_1_of_2">Game</string>
    <string name="game_4cancel_2_of_2">Cancelled</string>
    <string name="game_5makeup_1_of_2">Make Up</string>
    <string name="game_5makeup_2_of_2">Game</string>
    <string name="action_settings_title">Edit Favorites</string>
    <string name="action_choose_title">Choose Favorite</string>
    <string name="file_name_text_hint">Image File Name</string>
    <string name="image_description">Photo Image</string>
    <string name="menu_settings">Settings</string>
    <string name="photo_list_user_name_hint">WHAT USER??</string>
    <string name="photo_list_photo_name_hint">Please select a Photo</string>
    <string name="upload_button_text">Upload as Andrew</string>
    <string name="upload_success">Photo Uploaded</string>
    <string name="upload_failure">Error with Upload</string>
    <string name="view_button_text">Browse Gallery</string>

</resources>