<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/upload_imageView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:contentDescription="@string/image_description" >

    </ImageView>

    <EditText
        android:id="@+id/upload_file_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_name_text_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal" >

        <Button
            android:id="@+id/buttonViewGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_button_text" />
        <Button
            android:id="@+id/buttonUploadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_button_text" />
        
    </LinearLayout>

</LinearLayout>